force-app/main/default/objects/Deal_Conflict__c/Deal_Conflict__c.object-meta.xml
<CustomObject><deploymentStatus
  >Deployed</deploymentStatus><label>Deal Conflict</label><pluralLabel
  >Deal Conflicts</pluralLabel><nameField><displayFormat
    >DCF-{00000000}</displayFormat><label>Deal Conflict Number</label><type
    >AutoNumber</type></nameField><sharingModel
  >Private</sharingModel><enableReports>true</enableReports><enableActivities
  >false</enableActivities></CustomObject>