force-app/main/default/objects/Deal_Conflict__c/fields/Analysis_Run__c.field-meta.xml
<CustomField><fullName
  >Analysis_Run__c</fullName><label>Analysis Run</label><type
  >Lookup</type><referenceTo
  >Deal_Conflict_Analysis_Run__c</referenceTo><relationshipLabel
  >Conflict Findings</relationshipLabel><relationshipName
  >Conflict_Findings</relationshipName><deleteConstraint
  >SetNull</deleteConstraint><required>false</required></CustomField>