force-app/main/default/objects/Deal_Conflict__c/fields/Assigned_To__c.field-meta.xml
<CustomField><fullName
  >Assigned_To__c</fullName><label>Assigned To</label><type
  >Lookup</type><referenceTo>User</referenceTo><relationshipLabel
  >Assigned To Conflicts</relationshipLabel><relationshipName
  >Assigned_To_Conflicts</relationshipName><deleteConstraint
  >SetNull</deleteConstraint><required>false</required></CustomField>