force-app/main/default/objects/Deal_Conflict__c/fields/Assignment__c.field-meta.xml
<CustomField><fullName
  >Assignment__c</fullName><label>Assignment</label><type>Text</type><length
  >80</length><required>false</required></CustomField>