force-app/main/default/objects/Deal_Conflict__c/fields/Confidence__c.field-meta.xml
<CustomField><fullName
  >Confidence__c</fullName><label>Confidence</label><type
  >Number</type><precision>5</precision><scale>2</scale><required
  >false</required></CustomField>