force-app/main/default/objects/Deal_Conflict__c/fields/Deal__c.field-meta.xml
<CustomField><fullName
  >Deal__c</fullName><label>Deal</label><type>Lookup</type><referenceTo
  >Deal_Registration__c</referenceTo><relationshipLabel
  >Deal Conflicts</relationshipLabel><relationshipName
  >Deal_Conflicts</relationshipName><deleteConstraint
  >SetNull</deleteConstraint><required>false</required></CustomField>