force-app/main/default/objects/Deal_Conflict__c/fields/Evidence_JSON__c.field-meta.xml
<CustomField><fullName
  >Evidence_JSON__c</fullName><label>Evidence JSON</label><type
  >LongTextArea</type><length>32768</length><visibleLines
  >3</visibleLines></CustomField>