force-app/main/default/objects/Deal_Conflict__c/fields/Evidence_Requested_On__c.field-meta.xml
<CustomField><fullName
  >Evidence_Requested_On__c</fullName><label>Evidence Requested On</label><type
  >DateTime</type><required>false</required></CustomField>