force-app/main/default/objects/Deal_Conflict__c/fields/Evidence_Submitted_On__c.field-meta.xml
<CustomField><fullName
  >Evidence_Submitted_On__c</fullName><label>Evidence Submitted On</label><type
  >DateTime</type><required>false</required></CustomField>