force-app/main/default/objects/Deal_Conflict__c/fields/Evidence_Summary__c.field-meta.xml
<CustomField><fullName
  >Evidence_Summary__c</fullName><label>Evidence Summary</label><type
  >LongTextArea</type><length>32768</length><visibleLines
  >3</visibleLines></CustomField>