force-app/main/default/objects/Deal_Conflict__c/fields/Investigation_Started_On__c.field-meta.xml
<CustomField><fullName
  >Investigation_Started_On__c</fullName><label
  >Investigation Started On</label><type>DateTime</type><required
  >false</required></CustomField>