force-app/main/default/objects/Deal_Conflict__c/fields/Match_Score__c.field-meta.xml
<CustomField><fullName
  >Match_Score__c</fullName><label>Match Score</label><type
  >Number</type><precision>5</precision><scale>2</scale><required
  >false</required></CustomField>