force-app/main/default/objects/Deal_Conflict__c/fields/Matched_Deal__c.field-meta.xml
<CustomField><fullName
  >Matched_Deal__c</fullName><label>Matched Deal</label><type
  >Lookup</type><referenceTo
  >Deal_Registration__c</referenceTo><relationshipLabel
  >Matched Conflict Findings</relationshipLabel><relationshipName
  >Matched_Conflict_Findings</relationshipName><deleteConstraint
  >SetNull</deleteConstraint><required>false</required></CustomField>