force-app/main/default/objects/Deal_Conflict__c/fields/Partner_Classification__c.field-meta.xml
<CustomField>
    <fullName>Partner_Classification__c</fullName>
    <label>Partner Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overlapping Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>