force-app/main/default/objects/Deal_Conflict__c/fields/Partner_Message__c.field-meta.xml
<CustomField><fullName
  >Partner_Message__c</fullName><label>Partner Message</label><type
  >LongTextArea</type><length>32768</length><visibleLines
  >3</visibleLines></CustomField>