force-app/main/default/objects/Deal_Conflict__c/fields/Resolution__c.field-meta.xml
<CustomField><fullName
  >Resolution__c</fullName><label>Resolution</label><type>Text</type><length
  >255</length><required>false</required></CustomField>