force-app/main/default/objects/Deal_Conflict__c/fields/Resolution_Reason__c.field-meta.xml
<CustomField><fullName
  >Resolution_Reason__c</fullName><label>Resolution Reason</label><type
  >Text</type><length>255</length><required>false</required></CustomField>