force-app/main/default/objects/Deal_Conflict__c/fields/Resolved_By__c.field-meta.xml
<CustomField><fullName
  >Resolved_By__c</fullName><label>Resolved By</label><type
  >Lookup</type><referenceTo>User</referenceTo><relationshipLabel
  >Resolved By Conflicts</relationshipLabel><relationshipName
  >Resolved_By_Conflicts</relationshipName><deleteConstraint
  >SetNull</deleteConstraint><required>false</required></CustomField>