force-app/main/default/objects/Deal_Conflict__c/fields/Reviewed_Evidence__c.field-meta.xml
<CustomField><fullName
  >Reviewed_Evidence__c</fullName><label>Reviewed Evidence</label><type
  >Text</type><length>255</length><required>false</required></CustomField>