force-app/main/default/objects/Deal_Conflict__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Same Customer Account</fullName>
            </value>
            <value>
                <fullName>Identity Fingerprint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>