force-app/main/default/objects/Deal_Conflict__c/fields/Type__c.field-meta.xml
<CustomField><fullName
  >Type__c</fullName><label>Type</label><type>Text</type><length
  >80</length><required>false</required></CustomField>