force-app/main/default/objects/Deal_Conflict__c/fields/Waived_By__c.field-meta.xml
<CustomField><fullName
  >Waived_By__c</fullName><label>Waived By</label><type
  >Lookup</type><referenceTo>User</referenceTo><relationshipLabel
  >Waived Conflicts</relationshipLabel><relationshipName
  >Waived_Conflicts</relationshipName><deleteConstraint
  >SetNull</deleteConstraint><required>false</required></CustomField>