force-app/main/default/objects/Deal_Conflict__c/fields/Waived_On__c.field-meta.xml
<CustomField><fullName
  >Waived_On__c</fullName><label>Waived On</label><type>DateTime</type><required
  >false</required></CustomField>