force-app/main/default/objects/Deal_Conflict__c/fields/Waiver_Conditions__c.field-meta.xml
<CustomField><fullName
  >Waiver_Conditions__c</fullName><label>Waiver Conditions</label><type
  >LongTextArea</type><length>32768</length><visibleLines
  >3</visibleLines></CustomField>