force-app/main/default/objects/Deal_Conflict__c/fields/Waiver_Expires_On__c.field-meta.xml
<CustomField><fullName
  >Waiver_Expires_On__c</fullName><label>Waiver Expires On</label><type
  >DateTime</type><required>false</required></CustomField>