force-app/main/default/objects/Deal_Conflict__c/fields/Waiver_Reason__c.field-meta.xml
<CustomField><fullName
  >Waiver_Reason__c</fullName><label>Waiver Reason</label><type
  >Text</type><length>255</length><required>false</required></CustomField>